--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,6 +39,16 @@
 			    				</div>
 			    			</div>
 			    			
+			    			<div class="form-group">
+	                            <label for="avatar" class="col-sm-2 control-label">Upload avatar</label>
+	                            <div class="col-sm-10">                    
+	                                <div class="input-group">
+	                                  <div class="input-group-addon"></div>
+	                                  <input type="text" class="form-control" name="avatar" id="avatar">
+	                                </div>
+	                            </div>
+                        	</div>
+                        
 			    			<input type="submit" value="Register" class="btn btn-info btn-block">
 			    		
 			    		</form>
